# snarks-test

./: .clangd  .gitmodules  CMakeLists.txt  install-deps.sh  main.cpp
src/examples/: example1.cpp
src/include/common/: common.hpp  proc.hpp
src/include/kvstore/: CMakeLists.txt  kv-store.hpp
src/include/lock_manager/: lock_manager.hpp
src/tests/: tests.cpp
